[TBR-10488] resizing with cookies modal open no longer creates unwanted spacing
Summary: resizing with cookies modal open no longer creates unwanted spacing

Test Plan: Review

Reviewers: mantas.buga

Reviewed By: mantas.buga

Differential Revision: https://ph.tonybet.com/D17088

--- a/styles/bnl/stylesheets/scss/_custom.scss
+++ b/styles/bnl/stylesheets/scss/_custom.scss
@@ -12,10 +12,10 @@ body {
     margin: auto;
     overflow-x: hidden;
     @include media-breakpoint-down(xl) {
-        padding: 0 45px;
+        padding: 0 45px !important;
     }
     @include media-breakpoint-down(lg) {
-        padding: 0 20px;
+        padding: 0 20px !important;
     }
     &.modal-open-windows {
       transform: translateX(-8px);
